--- a/중간 서치페이지.html
+++ b/중간 서치페이지.html
@@ -1,4 +1,7 @@
 
+<head>
+    <meta charset="utf-8">
+</head>
 
 <link rel="stylesheet" type="text/css" href="css/search.css">
 <link rel="stylesheet" type="text/css" href="css/beer.css">
