--- a/찜목록.html
+++ b/찜목록.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+</head>
+
+
+
 <link rel="stylesheet" type="text/css" href="css/want.css">
 <link rel="stylesheet" type="text/css" href="css/beer.css">
 
