--- a/중간 서치페이지.html
+++ b/중간 서치페이지.html
@@ -1,6 +1,6 @@
-
+<!DOCTYPE html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 </head>
 
 <link rel="stylesheet" type="text/css" href="css/search.css">
