--- a/중간 서치페이지.html
+++ b/중간 서치페이지.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
 </head>
@@ -752,3 +753,4 @@
         </aside>
     
     </footer>
+    </html>
