--- a/중간 서치페이지.html
+++ b/중간 서치페이지.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <title>Search Page</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="css/search.css">
