--- a/상세페이지.html
+++ b/상세페이지.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="EUC-KR">
     <title>infomation Page</title>
 </head>
 
