--- a/중간 서치페이지.html
+++ b/중간 서치페이지.html
@@ -88,8 +88,8 @@
         <div class="sub-filter">
         <div calss="filter-item" >
             <div class="filter-item-box" style="border-radius: 10px 0px 0px 0px;">
-                <img src="img/ic_global.png" style="width: 50px; hight: 50px; margin-top: 3px; text-align: center; filter: drop-shadow(4px 4px 4px); opacity: 0.2; 
-              ">종류
+                <img src="ic/ic_global.svg" style="width: 50px; height: 50px; margin-top: 3px; text-align: center; filter: drop-shadow(4px 4px 4px); opacity: 0.2; color: black;
+              ">
             </div>
             <ul class="box-view">
                 <li>
@@ -115,7 +115,7 @@
 
         <div calss="filter-item">
             <div class="filter-item-box">
-                <img src="img/ic_star.png" style="width: 50px; hight: 50px; margin-top: 3px; text-align: center;">국가
+                <img src="ic/ic_beer.svg" style="width: 50px; height: 50px; margin-top: 3px; text-align: center;">
             </div>
             <ul class="box-view">
                 <li>
@@ -164,7 +164,7 @@
         </div>
         <div calss="filter-item">
             <div class="filter-item-box">
-                <img src="img/ic_star.png" style="width: 50px; hight: 50px; margin-top: 3px; text-align: center;">가격
+                <img src="ic/ic_alc.svg" style="width: 50px; height: 50px; margin-top: 3px; text-align: center;">
             </div>
             <ul class="box-view">
                 <li>
@@ -213,7 +213,7 @@
         </div>
         <div class="filter-item">
             <div class="filter-item-box">
-                <img src="img/ic_star.png" style="width: 50px; hight: 50px; margin-top: 3px; text-align: center;"> 음식매칭
+                <img src="ic/ic_option.svg" style="width: 50px; height: 50px; margin-top: 3px; text-align: center;"> Food
             </div>
             <ul class="box-view">
                 <li>
@@ -306,7 +306,7 @@
 
         <div class="filter-item">
             <div class="filter-item-box" style="border-radius: 0px 10px 0px 0px;">
-                <img src="img/ic_star.png" style="width: 50px; hight: 50px; margin-top: 3px; text-align: center;">맥주 스타일
+                <img src="ic/ic_option.svg" style="width: 50px; height: 50px; margin-top: 3px; text-align: center;"> Style
             </div>
             <ul class="box-view">
                 <div class="" style="padding: 20px;; color: brown;">1~5까지(0.5가능)</div>
